# serializer version: 1
# name: test_config_entry_accessory
  dict({
    'accessories': list([
      dict({
        'aid': 1,
        'services': list([
          dict({
            'characteristics': list([
              dict({
                'format': 'bool',
                'iid': 2,
                'perms': list([
                  'pw',
                ]),
                'type': '14',
              }),
              dict({
                'format': 'string',
                'iid': 3,
                'perms': list([
                  'pr',
                ]),
                'type': '20',
                'value': 'Home Assistant Light',
              }),
              dict({
                'format': 'string',
                'iid': 4,
                'perms': list([
                  'pr',
                ]),
                'type': '21',
                'value': 'Light',
              }),
              dict({
                'format': 'string',
                'iid': 5,
                'perms': list([
                  'pr',
                ]),
                'type': '23',
                'value': 'demo',
              }),
              dict({
                'format': 'string',
                'iid': 6,
                'perms': list([
                  'pr',
                ]),
                'type': '30',
                'value': 'light.demo',
              }),
              dict({
                'format': 'string',
                'iid': 7,
                'perms': list([
                  'pr',
                ]),
                'type': '52',
                'value': '2025.5.0',
              }),
            ]),
            'iid': 1,
            'type': '3E',
          }),
          dict({
            'characteristics': list([
              dict({
                'format': 'string',
                'iid': 9,
                'perms': list([
                  'pr',
                  'ev',
                ]),
                'type': '37',
                'value': '01.01.00',
              }),
            ]),
            'iid': 8,
            'type': 'A2',
          }),
          dict({
            'characteristics': list([
              dict({
                'format': 'bool',
                'iid': 11,
                'perms': list([
                  'pr',
                  'pw',
                  'ev',
                ]),
                'type': '25',
                'value': True,
              }),
            ]),
            'iid': 10,
            'type': '43',
          }),
        ]),
      }),
    ]),
    'accessory': dict({
      'aid': 1,
      'category': 5,
      'config': dict({
      }),
      'entity_id': 'light.demo',
      'entity_state': dict({
        'attributes': dict({
        }),
        'context': dict({
          'id': '01JRKHRN69T135Q2JPW10HJY3J',
          'parent_id': None,
          'user_id': None,
        }),
        'entity_id': 'light.demo',
        'last_changed': '2025-04-11T23:08:10.313997+00:00',
        'last_reported': '2025-04-11T23:08:10.313997+00:00',
        'last_updated': '2025-04-11T23:08:10.313997+00:00',
        'state': 'on',
      }),
      'name': 'demo',
    }),
    'client_properties': dict({
    }),
    'config-entry': dict({
      'data': dict({
        'name': 'mock_name',
        'port': 12345,
      }),
      'options': dict({
        'filter': dict({
          'exclude_domains': list([
          ]),
          'exclude_entities': list([
          ]),
          'include_domains': list([
          ]),
          'include_entities': list([
            'light.demo',
          ]),
        }),
        'mode': 'accessory',
      }),
      'title': 'Mock Title',
      'version': 1,
    }),
    'config_version': 2,
    'iid_storage': dict({
      '1': dict({
        '3E__14_': 2,
        '3E__20_': 3,
        '3E__21_': 4,
        '3E__23_': 5,
        '3E__30_': 6,
        '3E__52_': 7,
        '43__25_': 11,
        '43___': 10,
        'A2__37_': 9,
        'A2___': 8,
      }),
    }),
    'pairing_id': '33:B6:E0:D8:6A:B7',
    'status': 1,
  })
# ---
# name: test_config_entry_running
  dict({
    'accessories': list([
      dict({
        'aid': 1,
        'services': list([
          dict({
            'characteristics': list([
              dict({
                'format': 'bool',
                'iid': 2,
                'perms': list([
                  'pw',
                ]),
                'type': '14',
              }),
              dict({
                'format': 'string',
                'iid': 3,
                'perms': list([
                  'pr',
                ]),
                'type': '20',
                'value': 'Home Assistant',
              }),
              dict({
                'format': 'string',
                'iid': 4,
                'perms': list([
                  'pr',
                ]),
                'type': '21',
                'value': 'Bridge',
              }),
              dict({
                'format': 'string',
                'iid': 5,
                'perms': list([
                  'pr',
                ]),
                'type': '23',
                'value': 'mock_name',
              }),
              dict({
                'format': 'string',
                'iid': 6,
                'perms': list([
                  'pr',
                ]),
                'type': '30',
                'value': 'homekit.bridge',
              }),
              dict({
                'format': 'string',
                'iid': 7,
                'perms': list([
                  'pr',
                ]),
                'type': '52',
                'value': '2025.5.0',
              }),
            ]),
            'iid': 1,
            'type': '3E',
          }),
          dict({
            'characteristics': list([
              dict({
                'format': 'string',
                'iid': 9,
                'perms': list([
                  'pr',
                  'ev',
                ]),
                'type': '37',
                'value': '01.01.00',
              }),
            ]),
            'iid': 8,
            'type': 'A2',
          }),
        ]),
      }),
    ]),
    'bridge': dict({
    }),
    'client_properties': dict({
    }),
    'config-entry': dict({
      'data': dict({
        'name': 'mock_name',
        'port': 12345,
      }),
      'options': dict({
      }),
      'title': 'Mock Title',
      'version': 1,
    }),
    'config_version': 2,
    'iid_storage': dict({
      '1': dict({
        '3E__14_': 2,
        '3E__20_': 3,
        '3E__21_': 4,
        '3E__23_': 5,
        '3E__30_': 6,
        '3E__52_': 7,
        'A2__37_': 9,
        'A2___': 8,
      }),
    }),
    'pairing_id': '5A:AC:9A:68:47:4D',
    'status': 1,
  })
# ---
# name: test_config_entry_with_trigger_accessory
  dict({
    'accessories': list([
      dict({
        'aid': 1,
        'services': list([
          dict({
            'characteristics': list([
              dict({
                'format': 'bool',
                'iid': 2,
                'perms': list([
                  'pw',
                ]),
                'type': '14',
              }),
              dict({
                'format': 'string',
                'iid': 3,
                'perms': list([
                  'pr',
                ]),
                'type': '20',
                'value': 'Home Assistant',
              }),
              dict({
                'format': 'string',
                'iid': 4,
                'perms': list([
                  'pr',
                ]),
                'type': '21',
                'value': 'Bridge',
              }),
              dict({
                'format': 'string',
                'iid': 5,
                'perms': list([
                  'pr',
                ]),
                'type': '23',
                'value': 'mock_name',
              }),
              dict({
                'format': 'string',
                'iid': 6,
                'perms': list([
                  'pr',
                ]),
                'type': '30',
                'value': 'homekit.bridge',
              }),
              dict({
                'format': 'string',
                'iid': 7,
                'perms': list([
                  'pr',
                ]),
                'type': '52',
                'value': '2025.5.0',
              }),
            ]),
            'iid': 1,
            'type': '3E',
          }),
          dict({
            'characteristics': list([
              dict({
                'format': 'string',
                'iid': 9,
                'perms': list([
                  'pr',
                  'ev',
                ]),
                'type': '37',
                'value': '01.01.00',
              }),
            ]),
            'iid': 8,
            'type': 'A2',
          }),
        ]),
      }),
      dict({
        'aid': 4130395267,
        'services': list([
          dict({
            'characteristics': list([
              dict({
                'format': 'bool',
                'iid': 2,
                'perms': list([
                  'pw',
                ]),
                'type': '14',
              }),
              dict({
                'format': 'string',
                'iid': 3,
                'perms': list([
                  'pr',
                ]),
                'type': '20',
                'value': 'Demo',
              }),
              dict({
                'format': 'string',
                'iid': 4,
                'perms': list([
                  'pr',
                ]),
                'type': '21',
                'value': 'Home Assistant',
              }),
              dict({
                'format': 'string',
                'iid': 5,
                'perms': list([
                  'pr',
                ]),
                'type': '23',
                'value': 'Ceiling Lights',
              }),
              dict({
                'format': 'string',
                'iid': 6,
                'perms': list([
                  'pr',
                ]),
                'type': '30',
                'value': '8d127b8c3647f0d2f57e8578d635ae93',
              }),
              dict({
                'format': 'string',
                'iid': 7,
                'perms': list([
                  'pr',
                ]),
                'type': '52',
                'value': '2025.5.0',
              }),
            ]),
            'iid': 1,
            'type': '3E',
          }),
          dict({
            'characteristics': list([
              dict({
                'format': 'uint8',
                'iid': 9,
                'perms': list([
                  'pr',
                  'ev',
                ]),
                'type': '73',
                'valid-values': list([
                  0,
                ]),
                'value': None,
              }),
              dict({
                'format': 'string',
                'iid': 10,
                'perms': list([
                  'pr',
                ]),
                'type': '23',
                'value': 'Ceiling Lights Changed States',
              }),
              dict({
                'format': 'string',
                'iid': 11,
                'perms': list([
                  'pr',
                  'pw',
                  'ev',
                ]),
                'type': 'E3',
                'value': 'Ceiling Lights Changed States',
              }),
              dict({
                'format': 'uint8',
                'iid': 12,
                'maxValue': 255,
                'minStep': 1,
                'minValue': 1,
                'perms': list([
                  'pr',
                ]),
                'type': 'CB',
                'value': 1,
              }),
            ]),
            'iid': 8,
            'linked': list([
              13,
            ]),
            'type': '89',
          }),
          dict({
            'characteristics': list([
              dict({
                'format': 'uint8',
                'iid': 14,
                'perms': list([
                  'pr',
                ]),
                'type': 'CD',
                'valid-values': list([
                  0,
                  1,
                ]),
                'value': 1,
              }),
            ]),
            'iid': 13,
            'type': 'CC',
          }),
          dict({
            'characteristics': list([
              dict({
                'format': 'uint8',
                'iid': 16,
                'perms': list([
                  'pr',
                  'ev',
                ]),
                'type': '73',
                'valid-values': list([
                  0,
                ]),
                'value': None,
              }),
              dict({
                'format': 'string',
                'iid': 17,
                'perms': list([
                  'pr',
                ]),
                'type': '23',
                'value': 'Ceiling Lights Turned Off',
              }),
              dict({
                'format': 'string',
                'iid': 18,
                'perms': list([
                  'pr',
                  'pw',
                  'ev',
                ]),
                'type': 'E3',
                'value': 'Ceiling Lights Turned Off',
              }),
              dict({
                'format': 'uint8',
                'iid': 19,
                'maxValue': 255,
                'minStep': 1,
                'minValue': 1,
                'perms': list([
                  'pr',
                ]),
                'type': 'CB',
                'value': 2,
              }),
            ]),
            'iid': 15,
            'linked': list([
              20,
            ]),
            'type': '89',
          }),
          dict({
            'characteristics': list([
              dict({
                'format': 'uint8',
                'iid': 21,
                'perms': list([
                  'pr',
                ]),
                'type': 'CD',
                'valid-values': list([
                  0,
                  1,
                ]),
                'value': 1,
              }),
            ]),
            'iid': 20,
            'type': 'CC',
          }),
          dict({
            'characteristics': list([
              dict({
                'format': 'uint8',
                'iid': 23,
                'perms': list([
                  'pr',
                  'ev',
                ]),
                'type': '73',
                'valid-values': list([
                  0,
                ]),
                'value': None,
              }),
              dict({
                'format': 'string',
                'iid': 24,
                'perms': list([
                  'pr',
                ]),
                'type': '23',
                'value': 'Ceiling Lights Turned On',
              }),
              dict({
                'format': 'string',
                'iid': 25,
                'perms': list([
                  'pr',
                  'pw',
                  'ev',
                ]),
                'type': 'E3',
                'value': 'Ceiling Lights Turned On',
              }),
              dict({
                'format': 'uint8',
                'iid': 26,
                'maxValue': 255,
                'minStep': 1,
                'minValue': 1,
                'perms': list([
                  'pr',
                ]),
                'type': 'CB',
                'value': 3,
              }),
            ]),
            'iid': 22,
            'linked': list([
              27,
            ]),
            'type': '89',
          }),
          dict({
            'characteristics': list([
              dict({
                'format': 'uint8',
                'iid': 28,
                'perms': list([
                  'pr',
                ]),
                'type': 'CD',
                'valid-values': list([
                  0,
                  1,
                ]),
                'value': 1,
              }),
            ]),
            'iid': 27,
            'type': 'CC',
          }),
        ]),
      }),
    ]),
    'client_properties': dict({
    }),
    'config-entry': dict({
      'data': dict({
        'name': 'mock_name',
        'port': 12345,
      }),
      'options': dict({
        'devices': list([
          '8d127b8c3647f0d2f57e8578d635ae93',
        ]),
        'filter': dict({
          'exclude_domains': list([
          ]),
          'exclude_entities': list([
          ]),
          'include_domains': list([
          ]),
          'include_entities': list([
            'light.none',
          ]),
        }),
      }),
      'title': 'Mock Title',
      'version': 1,
    }),
    'config_version': 2,
    'pairing_id': '1F:EC:C7:7F:67:CC',
    'status': 1,
  })
# ---
